<resources>
    <string name="app_name">BeaconMoive</string>
    <string name="text_rssi_num">-40</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="text_new_user">新用户</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="btn_login">登录</string>
    <string name="text_login_name">用户名</string>
    <string name="text_login_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="user_name">输入用户名</string>
    <string name="new_password">输入密码</string>
    <string name="input_new_password_again">再次输入密码</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BeaconMoive</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_exit">退出</string>
    <string name="menu_version">Verison1.0</string>
    <string name="menu_operation">操作</string>
    <string name="menu_login">登录</string>
</resources>
