<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/version"
            android:icon="@drawable/ic_version"
            android:title="@string/menu_version" />
    </group>

    <item android:title="@string/menu_operation">
        <menu>
            <item
                android:id="@+id/login"
                android:icon="@drawable/ic_login"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/back"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_exit" />

        </menu>
    </item>

</menu>
