<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_new_user"
        style="@style/User_Style"
        android:layout_marginTop="24dp"
        android:hint="@string/user_name"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/ed_new_password"
        style="@style/User_Style"
        android:layout_marginTop="2dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/ed_new_password_again"
        style="@style/User_Style"
        android:layout_marginTop="2dp"
        android:hint="@string/input_new_password_again"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="312dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:background="@drawable/shape_button"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>
