<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:background="@mipmap/login_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="45dp"
                android:background="@mipmap/login_user" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:background="@null"
                android:hint="@string/text_login_name"
                android:maxLines="1"
                android:singleLine="true"
                android:text="root"
                android:textColor="#9B9B9B"
                android:textColorHint="#9B9B9B "
                android:textSize="14sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="223dp"
            android:layout_marginRight="40dp"
            android:background="#9B9B9B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="229dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="45dp"
                android:background="@mipmap/login_lock" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginLeft="21dp"
                android:background="@null"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="123456"
                android:textColor="#9B9B9B"
                android:textColorHint="#9B9B9B "
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="276dp"
            android:layout_marginRight="40dp"
            android:background="#9B9B9B" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="303dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape_button"
            android:text="@string/btn_login"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="353dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape_button"
            android:text="@string/register"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <!--<Button-->
            <!--android:id="@+id/btn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Admins" />-->

        <!--<Button-->
            <!--android:id="@+id/btn_user"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:text="User" />-->
    </RelativeLayout>
</FrameLayout>
